--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,7 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v3
         with:
-          context: docker-pi-hole-base/.
+          context: .
           platforms: linux/amd64
           build-args: |
             UPSTREAM_TAG=${{ github.event.inputs.upstream_tag }}
